# XSCE

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  README_cn.md  build.py
src/PSI/: CMakeLists.txt
src/PSI/delfiles/oprf_psi_bk/: oprf_psi_server.cpp
src/PSI/delfiles/oprf_psi_bk_include/: oprf_psi_server.h
src/PSI/example/: main.cpp  main.h
src/PSI/include/: psi.h
src/PSI/include/oprf_psi/: oprf_psi.h  oprf_psi_client.h  oprf_psi_server.h
src/PSI/offline/: CMakeLists.txt  c_offline.proto  c_offline_interface.cpp  c_offline_interface.h  offline_interface.cpp  offline_interface.h
src/PSI/offline/oprf_psi/: oprf_psi.cpp  oprf_psi.h  oprf_psi_client.cpp  oprf_psi_client.h  oprf_psi_server.cpp  oprf_psi_server.h
src/PSI/offline/test/: main.cpp
src/PSI/source/: psi.cpp
src/PSI/source/oprf_psi/: oprf_psi.cpp  oprf_psi_client.cpp  oprf_psi_server.cpp
src/arithmetic/: CMakeLists.txt
src/arithmetic/Programs/Bytecode/: add2-0.bc  add2m16-0.bc  add2m16-multithread-1.bc  add2m32-0.bc  add2m32-multithread-1.bc  add3-0.bc  add3m16-0.bc  add3m16-multithread-1.bc  add3m32-0.bc  add3m32-multithread-1.bc  cmp2-0.bc  cmp2m16-0.bc  cmp2m32-0.bc  lr-prodot2-0.bc  mid2-0.bc  mid3-0.bc  mul2-0.bc  mul2m16-0.bc  mul2m16-multithread-1.bc  mul2m32-0.bc  mul2m32-multithread-1.bc  mul3-0.bc  mul3m16-0.bc  mul3m16-multithread-1.bc  mul3m32-0.bc  mul3m32-multithread-1.bc  prodot2-0.bc  var2-0.bc  var3-0.bc
src/arithmetic/Programs/Schedules/: add2.sch  add2m16.sch  add2m32.sch  add3.sch  add3m16.sch  add3m32.sch  cmp2.sch  cmp2m16.sch  cmp2m32.sch  lr-prodot2.sch  mid2.sch  mid3.sch  mul2.sch  mul2m16.sch  mul2m32.sch  mul3.sch  mul3m16.sch  mul3m32.sch  prodot2.sch  var2.sch  var3.sch
src/arithmetic/Programs/Source/: add2.mpc  add2m16.mpc  add2m32.mpc  add3.mpc  add3m16.mpc  add3m32.mpc  cmp2.mpc  cmp2m16.mpc  cmp2m32.mpc  lr-prodot2.mpc  mid2.mpc  mid3.mpc  mul2.mpc  mul2m16.mpc  mul2m32.mpc  mul3.mpc  mul3m16.mpc  mul3m32.mpc  prodot2.mpc  var2.mpc  var3.mpc
src/arithmetic/example/: main.cpp
src/arithmetic/include/: base-compute.h  base-compute.hpp  machinerunner.h
src/arithmetic/source/: base-compute.cpp  machinerunner.cpp
src/common/: CMakeLists.txt
src/common/pub/include/: Defines.h  globalCfg.h  ot.h  util.h
src/common/pub/source/: ot.cpp  util.cpp
src/logreg/: CMakeLists.txt
src/logreg/example/: main.cpp  main.h
src/logreg/include/: lr.h  lr_ose.h
src/logreg/source/: lr.cpp
src/pir/: CMakeLists.txt
src/pir/example/: main.cpp  main.h  main2.cpp
src/pir/include/: pir.h  pir_ose.h
src/pir/source/: pir.cpp
src/toolkits/: CMakeLists.txt
src/toolkits/util/include/: replace.h  task_status.h  xlog.h  xutil.hpp
src/toolkits/util/source/: xutil.cpp
